--- a/index.html
+++ b/index.html
@@ -158,6 +158,20 @@
     font-size: 1.2em;
     padding: 0;
 }
+.skills {
+    text-transform: uppercase;
+    font-weight: 700;
+    background-color: #3b8dbd;
+    display: inline;
+    padding: .2em .6em .3em;
+    font-size: 75%;
+    line-height: 1;
+    color: #fff;
+    text-align: center;
+    white-space: nowrap;
+    vertical-align: baseline;
+    border-radius: .25em;
+}
 		</style>
 	</head>
 	<body id="top">
@@ -166,7 +180,7 @@
 			<header id="header">
 				<a href="#" class="image avatar"><img src="images/avatar.jpg" alt="" /></a>
 				<h1><strong>Yusuf Uğur Soysal</strong><br />
-				senior java developer<br />
+				senior developer<br />
 				London, UK</h1>
 			</header>
 
@@ -174,18 +188,24 @@
 			<div id="main">
 
 				<!-- One -->
-				<!--
 					<section id="one">
 						<header class="major">
 							<h2>Ipsum lorem dolor aliquam ante commodo<br />
 							magna sed accumsan arcu neque.</h2>
 						</header>
-						<p>Accumsan orci faucibus id eu lorem semper. Eu ac iaculis ac nunc nisi lorem vulputate lorem neque cubilia ac in adipiscing in curae lobortis tortor primis integer massa adipiscing id nisi accumsan pellentesque commodo blandit enim arcu non at amet id arcu magna. Accumsan orci faucibus id eu lorem semper nunc nisi lorem vulputate lorem neque cubilia.</p>
+						<p>
+              <span class="skills">java</span>
+              <span class="skills">java enterprise edition</span>
+              <span class="skills">spring</span>
+              <span class="skills">hiberate</span>
+              <span class="skills">web services</span>
+              <span class="skills">pl/sql</span>
+              <span class="skills">oracle</span>
+            </p>
 						<ul class="actions">
 							<li><a href="#" class="button">Learn More</a></li>
 						</ul>
 					</section>
-					-->
 
 					<section id="one">
 						<h2>Experience</h2>
