--- a/index.html
+++ b/index.html
@@ -8,170 +8,173 @@
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
 		<style>
-			#newSection {
-				position: relative;
-				text-align: center;
-			    height: 450px;
-			}
 			.tmtimeline {
-			    margin: 0;
-			    padding: 0;
-			    list-style: none;
-			    position: relative;
-			}
-			.tmtimeline:before {
-    content: '';
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    width: 7px;
-    background: #d8e3e6;
-    left: 20%;
-    margin-left: -4px;
-}
-.tmtimeline:after {
-    left: 20%;
-    margin-left: -15px;
-    content: "";
-    height: 30px;
-    background: #d24d33;
-    box-shadow: 0 0 0 5px #d8e3e6;
-    width: 30px;
-    border-radius: 50%;
-    position: absolute;
-    margin-top: -15px;
-}
-			.tmtimeline > li .tmtime {
-			    display: block;
-			    width: 25%;
-			    padding-right: 10%;
-			    position: absolute;
-			}
-			.tmtimeline > li .tmtime:before {
-    display: block;
-    content: '';
-    position: absolute;
-    top: 21px;
-    right: -18px;
-    background: #d8e3e6;
-    height: 7px;
-    width: 20%;
-    z-index: 2;
-}
-.tmtimeline > li .tmlabel:after {
-    left: 10px;
-    content: "";
-    height: 15px;
-    background: #d8e3e6;
-    box-shadow: 0 0 0 5px #fff;
-    width: 15px;
-    border-radius: 50%;
-    position: absolute;
-    top: 10px;
-}
-.tmtimeline > li:nth-child(odd) .tmlabel:after {
-    border-right-color: #f9f9f9;
-}
-
-.tmtimeline > li .tmtime span {
-    display: block;
-    margin-top:15px;
-    padding-right: 10px;
-    text-align: right;
-    color: #858689;
-}
-			.tmtimeline > li .tmicon {
-    width: 45px;
-    height: 45px;
-    font-size: 0;
-    position: relative;
-    border-radius: 50%;
-    box-shadow: 0 0 0 7px #d8e3e6;
-    text-align: center;
-    left: 20%;
-    padding: 5px;
-    border: 5px solid #fff;
-    top: 5px;
-    margin: 0 0 0 -27px;
-}
-.n11 {
-    background-color: #ffffff;
-    background-image: url(images/n11.png);
-}
-.aol {
-    background-color: #ffffff;
-    background-image: url(images/aol.png);
-}
-.turkcell {
-    background-color: #ffffff;
-    background-image: url(images/turkcell.jpg);
-}
-.fortis {
-    background-color: #ffffff;
-    background-image: url(images/fortis.png);
-}
-.pink-btn, .bg-pink, .powerwidget.pink {
-    background-color: #ffffff;
-    background-image: url(images/n11.png);
-}
-.blue-btn, .bg-blue, .powerwidget.blue {
-    background-color: #5bc0de;
-}
-.cold-grey-btn, .bg-cold-grey, .powerwidget.cold-grey {
-    background-color: #595f66;
-}
-.yellow-btn, .bg-yellow, .powerwidget.yellow {
-    background-color: #f4cc13;
-}
-.red-btn, .bg-red, .powerwidget.red {
-    background-color: #d24d33;
-}
-.marine-btn, .bg-marine, .powerwidget.marine {
-    background-color: #00a9ae;
-}
-.tmtimeline > li:nth-child(odd) .tmlabel {
-    background: #f9f9f9;
-}
-.tmtimeline > li .tmlabel {
-    margin: -40px 0 15px 25%;
-    background: #f1f1f1;
-    padding: 15px;
-    padding-left: 40px;
-    position: relative;
-    border: 2px solid #ddd;
-    border-radius: 3px;
-}
-.tmtimeline > li .tmicon:before {
-    font-family: 'FontAwesome';
-    font-size: 20px;
-    color: #fff;
-}
-
-.tmtimeline > li .tmicon:after {
-    position: absolute;
-    content: "";
-    box-sizing: content-box;
-}
-.tmtimeline > li .tmlabel h2 {
-    margin-top: 0px;
-    font-weight: 700;
-    font-size: 1.2em;
-    padding: 0;
-}
-.skills {
-    text-transform: uppercase;
-    font-weight: 700;
-    background-color: #3b8dbd;
-    display: inline;
-    padding: .2em .6em .3em;
-    font-size: 75%;
-    line-height: 1;
-    color: #fff;
-    text-align: center;
-    white-space: nowrap;
-    vertical-align: baseline;
-    border-radius: .25em;
-}
+          margin: 0;
+          padding: 0;
+          list-style: none;
+          position: relative;
+      }
+      .tmtimeline:before {
+          content: '';
+          position: absolute;
+          top: 0;
+          bottom: 0;
+          width: 7px;
+          background: #d8e3e6;
+          left: 20%;
+          margin-left: -4px;
+      }
+      .experience:after {
+          left: 20%;
+          margin-left: -15px;
+          content: "";
+          height: 30px;
+          background: #d24d33;
+          box-shadow: 0 0 0 5px #d8e3e6;
+          width: 30px;
+          border-radius: 50%;
+          position: absolute;
+          margin-top: -15px;
+      }
+      .education:after{
+          left: 20%;
+          margin-left: -15px;
+          content: "";
+          height: 5px;
+          background: #d8e3e6;
+          width: 30px;
+          position: absolute;
+          margin-top: -15px;
+      }
+      .tmtimeline > li .tmtime {
+          display: block;
+          width: 25%;
+          padding-right: 10%;
+          position: absolute;
+      }
+      .tmtimeline > li .tmtime:before {
+          display: block;
+          content: '';
+          position: absolute;
+          top: 21px;
+          right: -18px;
+          background: #d8e3e6;
+          height: 7px;
+          width: 20%;
+          z-index: 2;
+      }
+      .tmtimeline > li .tmlabel:after {
+          left: 10px;
+          content: "";
+          height: 15px;
+          background: #d8e3e6;
+          box-shadow: 0 0 0 5px #fff;
+          width: 15px;
+          border-radius: 50%;
+          position: absolute;
+          top: 10px;
+      }
+      .tmtimeline > li:nth-child(odd) .tmlabel:after {
+          border-right-color: #f9f9f9;
+      }
+      .tmtimeline > li .tmtime span {
+          display: block;
+          margin-top: 15px;
+          padding-right: 10px;
+          text-align: right;
+          color: #858689;
+      }
+      .tmtimeline > li .tmicon {
+          width: 45px;
+          height: 45px;
+          font-size: 0;
+          position: relative;
+          border-radius: 50%;
+          box-shadow: 0 0 0 7px #d8e3e6;
+          text-align: center;
+          left: 20%;
+          padding: 5px;
+          border: 5px solid #fff;
+          top: 5px;
+          margin: 0 0 0 -27px;
+      }
+      .n11 {
+          background-color: #ffffff;
+          background-image: url(images/n11.png);
+          background-position: center;
+      }
+      .bahcesehir {
+          background-color: #ffffff;
+          background-image: url(images/bahcesehir.png);
+          background-position: center;
+      }
+      .aol {
+          background-color: #ffffff;
+          background-image: url(images/aol.png);
+          background-position: center;
+      }
+      .turkcell {
+          background-color: #ffffff;
+          background-image: url(images/turkcell.jpg);
+          background-position: center;
+      }
+      .fortis {
+          background-color: #ffffff;
+          background-image: url(images/fortis.png);
+          background-position: center;
+      }
+      .itu {
+          background-color: #ffffff;
+          background-image: url(images/itu.png);
+          background-position: center;
+      }
+      .marine-btn,
+      .bg-marine,
+      .powerwidget.marine {
+          background-color: #00a9ae;
+      }
+      .tmtimeline > li:nth-child(odd) .tmlabel {
+          background: #f9f9f9;
+      }
+      .tmtimeline > li .tmlabel {
+          margin: -40px 0 15px 25%;
+          background: #f1f1f1;
+          padding: 15px;
+          padding-left: 40px;
+          position: relative;
+          border: 2px solid #ddd;
+          border-radius: 3px;
+      }
+      .tmtimeline > li .tmicon:before {
+          font-family: 'FontAwesome';
+          font-size: 20px;
+          color: #fff;
+      }
+      .tmtimeline > li .tmicon:after {
+          position: absolute;
+          content: "";
+          box-sizing: content-box;
+      }
+      .tmtimeline > li .tmlabel h2 {
+          margin-top: 0px;
+          font-weight: 700;
+          font-size: 1.2em;
+          padding: 0;
+      }
+      .skills {
+          text-transform: uppercase;
+          font-weight: 700;
+          background-color: #3b8dbd;
+          display: inline;
+          padding: .2em .6em .3em;
+          font-size: 75%;
+          line-height: 1;
+          color: #fff;
+          text-align: center;
+          white-space: nowrap;
+          vertical-align: baseline;
+          border-radius: .25em;
+      }
 		</style>
 	</head>
 	<body id="top">
@@ -188,10 +191,9 @@
 			<div id="main">
 
 				<!-- One -->
-					<section id="one">
-						<header class="major">
-							<h2>Ipsum lorem dolor aliquam ante commodo<br />
-							magna sed accumsan arcu neque.</h2>
+				<section>
+						<header>
+							<h2>Skills</h2>
 						</header>
 						<p>
               <span class="skills">java</span>
@@ -202,20 +204,25 @@
               <span class="skills">pl/sql</span>
               <span class="skills">oracle</span>
             </p>
-						<ul class="actions">
-							<li><a href="#" class="button">Learn More</a></li>
-						</ul>
 					</section>
 
-					<section id="one">
+					<section>
 						<h2>Experience</h2>
-						<ul class="tmtimeline">
+						<ul class="tmtimeline experience">
                     <li>
                       <time class="tmtime"><span>2016 ...</span></time>
                       <div class="tmicon n11"></div>
                       <div class="tmlabel">
                         <h2>n11.com, Software Development Manager</h2>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam cursus turpis quis neque imperdiet, eleifend feugiat erat consectetur. Donec eget fringilla lorem, eget auctor sapien.</p>
+                        <p>n11.com is a joint venture between Doğuş Group and Korean SK Group focusing on e-commerce sector.</p>
+                      </div>
+                    </li>
+                    <li>
+                      <time class="tmtime"><span>2016</span></time>
+                      <div class="tmicon bahcesehir"></div>
+                      <div class="tmlabel">
+                        <h2>Bahçeşehir University, Guest Lecturer</h2>
+                        <p></p>
                       </div>
                     </li>
                     <li>
@@ -223,11 +230,7 @@
                       <div class="tmicon n11"></div>
                       <div class="tmlabel">
                         <h2>n11.com, Technical Team Lead</h2>
-                        <p>Caulie dandelion maize lentil collard greens radish arugula 
-                          sweet pepper water spinach kombu courgette lettuce. Celery coriander 
-                          bitterleaf epazote radicchio shallot winter purslane collard greens 
-                          spring onion squash lentil. Artichoke salad bamboo shoot black-eyed pea 
-                          brussels sprout garlic kohlrabi.</p>
+                        <p>n11.com is a joint venture between Doğuş Group and Korean SK Group focusing on e-commerce sector.</p>
                       </div>
                     </li>
                     <li>
@@ -235,7 +238,7 @@
                       <div class="tmicon aol"></div>
                       <div class="tmlabel">
                         <h2>AOL, Software Engineer</h2>
-                        <p>Nam tincidunt neque nec est bibendum, ut cursus nulla egestas. Etiam at mi vel sem viverra euismod. Nam scelerisque metus urna, ut facilisis augue dictum quis.</p>
+                        <p>AOL is a global web services company with a range of brands and offerings. Its business spans online content, products and services, which it offers to consumers, publishers and advertisers.</p>
                       </div>
                     </li>
                     <li>
@@ -243,7 +246,7 @@
                       <div class="tmicon turkcell"></div>
                       <div class="tmlabel">
                         <h2>Turkcell Technology, Senior Software Engineer</h2>
-                        <p> Donec fringilla metus dui, placerat pulvinar lectus elementum ullamcorper. Quisque dignissim nulla at purus volutpat placerat. In a justo purus.</p>
+                        <p>Turkcell is the leading GSM operator in Turkey. Turkcell Teknoloji is running and managing all software development projects of Turkcell Holding Company. Besides, it develops products and proprietary softwares for telecom operators in other countries.</p>
                       </div>
                     </li>
                     <li>
@@ -251,7 +254,7 @@
                       <div class="tmicon fortis"></div>
                       <div class="tmlabel">
                         <h2>Fortis Bank, Software Developer</h2>
-                        <p>Fusce pretium nibh eros, at adipiscing neque euismod eget. Suspendisse sollicitudin justo vel urna sollicitudin, sed pellentesque dolor ultricies.</p>
+                        <p>Fortis was amoung the leaders of Europe on banking and insurance.</p>
                       </div>
                     </li>
                     <li>
@@ -259,7 +262,7 @@
                       <div class="tmicon bg-marine fa-chrome"></div>
                       <div class="tmlabel">
                         <h2>Tossbaa, Software Developer</h2>
-                        <p> Fusce feugiat ornare libero sed gravida. Aenean metus est, suscipit nec condimentum ac, facilisis eget lorem. Suspendisse rutrum lorem orci. Ut in ligula neque. Phasellus a enim at leo pellentesque dapibus. Integer dignissim sem eu venenatis facilisis. Sed quis neque nec lectus gravida euismod. Nam sollicitudin, nisl nec lacinia blandit, magna felis pharetra enim, et lacinia metus ipsum et est.</p>
+                        <p>Tossbaa Technology was a start-up focused on mobile and web programming. It was supported by Ericsson.</p>
                       </div>
                     </li>
                     <li>
@@ -267,11 +270,41 @@
                       <div class="tmicon bg-marine fa-firefox"></div>
                       <div class="tmlabel">
                         <h2>2U Information Technologies, Software Developer</h2>
-                        <p> Fusce feugiat ornare libero sed gravida. Aenean metus est, suscipit nec condimentum ac, facilisis eget lorem. Suspendisse rutrum lorem orci. Ut in ligula neque. Phasellus a enim at leo pellentesque dapibus. Integer dignissim sem eu venenatis facilisis. Sed quis neque nec lectus gravida euismod. Nam sollicitudin, nisl nec lacinia blandit, magna felis pharetra enim, et lacinia metus ipsum et est.</p>
+                        <p>2U Information Technology was working on Linux Systems and Web-based applications.</p>
                       </div>
                     </li>
                   </ul>
 					</section>
+
+        <section>
+            <header>
+              <h2>Patents</h2>
+            </header>
+            <p>A system for gathering and processing SMS delivery reports in distributed environments – 2012/03668<br />
+            A system for sending SMS messages without using msisdn - 2012/03669</p>
+          </section>
+
+          <section id="one">
+            <h2>Education</h2>
+            <ul class="tmtimeline education">
+                    <li>
+                      <time class="tmtime"><span>2004 - 2005</span></time>
+                      <div class="tmicon itu"></div>
+                      <div class="tmlabel">
+                        <h2>Istanbul Technical University, Master's Degree</h2>
+                        <p>Design and Management of Information Systems</p>
+                      </div>
+                    </li>
+                    <li>
+                      <time class="tmtime"><span>2000 - 2004</span></time>
+                      <div class="tmicon itu"></div>
+                      <div class="tmlabel">
+                        <h2>Istanbul Technical University, Bachelor's Degree</h2>
+                        <p>Mathematics Engineering</p>
+                      </div>
+                    </li>
+                  </ul>
+          </section>
 
           <section id="two">
             <header class="major">
@@ -327,9 +360,8 @@
 		<!-- Footer -->
 			<footer id="footer">
 				<ul class="icons">
-					<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-					<li><a href="#" class="icon fa-github"><span class="label">Github</span></a></li>
-					<li><a href="#" class="icon fa-dribbble"><span class="label">Dribbble</span></a></li>
+					<li><a href="https://twitter.com/yusufsoysal" class="icon fa-twitter" target="_blank"><span class="label">Twitter</span></a></li>
+					<li><a href="https://github.com/yusufsoysal" class="icon fa-github" target="_blank"><span class="label">Github</span></a></li>
 					<li><a href="#" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
 				</ul>
 				<ul class="copyright">
